fix: /auth/logout swagger docs
